--- a/index.html
+++ b/index.html
@@ -100,17 +100,17 @@
         </section>
 </main>
     <footer class="footer">
-        <ul class="container">
-            <li class="top-padding">
-                <a class="logo-footer" href="#"><span class="web-logo">Web</span>Studio</a>
-            </li>
-            <li>
+        <div class="padding-footer">
+                    <a class="logo-footer" href="#"><span class="web-logo">Web</span>Studio</a>
+        </div>                   
+            <ul class="container">
+            <li class="pad">
                 <a class="adress-footer" href="#">г. Киев, пр-т Леси Украинки, 26</a>
             </li>
-            <li>
+            <li class="pad">
                 <a class="mail-footer" href="mailto:info@example.com">info@example.com</a>
             </li>    
-            <li class="b-m">
+            <li>
                 <a class="tel-footer" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
