--- a/index.html
+++ b/index.html
@@ -102,11 +102,9 @@
     <footer class="footer">
         <div class="padding-footer">
                     <a class="logo-footer" href="#"><span class="web-logo">Web</span>Studio</a>
-        </div>                   
+        </div>
+            <address class="pad"><a class="adress-footer" href="#">г. Киев, пр-т Леси Украинки, 26</a></address>              
             <ul class="container">
-            <li class="pad">
-                <a class="adress-footer" href="#">г. Киев, пр-т Леси Украинки, 26</a>
-            </li>
             <li class="pad">
                 <a class="mail-footer" href="mailto:info@example.com">info@example.com</a>
             </li>    
